@@ -14,7 +14,22 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>25-ea+21</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>25-ea+21</version>
+        </dependency>
+        <!-- Adding Incubator for CodeArea as required by the issue -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>jfx-incubator-richtext</artifactId>
+            <version>25-ea+21</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -25,6 +40,11 @@
                 <version>3.14.0</version>
                 <configuration>
                     <release>25</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                        <arg>--add-modules</arg>
+                        <arg>jfx.incubator.richtext</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
